force-app/main/default/objects/refedge__Unspecified_Request__c/refedge__Unspecified_Request__c.object-meta.xml
<CustomObject>
    <description>Unspecified Request associating with Reference Requests without accounts(Bound 3)</description>
    <label>Unspecified Request</label>
    <nameField>
        <displayFormat>UR-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unspecified Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>