force-app/main/default/objects/refedge__Unspecified_Request__c/fields/refedge__Community_Participate__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_Participate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Participate</label>
    <type>Checkbox</type>
</CustomField>