force-app/main/default/objects/refedge__Unspecified_Request__c/fields/refedge__Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Notes__c</fullName>
    <label>Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>