force-app/main/default/objects/refedge__Unspecified_Request__c/fields/refedge__Requester__c.field-meta.xml
<CustomField>
    <fullName>refedge__Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unspecified_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>