force-app/main/default/objects/refedge__Unspecified_Request__c/fields/refedge__Unspecified_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Unspecified_Request_Status__c</fullName>
    <label>Unspecified Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>No Reference Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>